# simmetry

./: CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
bench/: README.md  run.py
docs/: api.md  auto-metric.md  benchmarks.md  index.md  stability.md
simfast/: __init__.py  api.py  index.py  registry.py
simfast/ann/: __init__.py  faiss_.py  hnsw.py
simfast/points/: __init__.py  core.py
simfast/sets/: __init__.py  core.py
simfast/strings/: __init__.py  jaro.py  levenshtein.py  ngrams.py  pairwise.py
simfast/vectors/: __init__.py  core.py  pairwise.py
simmetry/: __init__.py  api.py  index.py  registry.py
simmetry/ann/: faiss_.py  hnsw.py
simmetry/points/: __init__.py  core.py  pairwise.py
simmetry/strings/: jaro.py  pairwise.py
simmetry/utils/: numpy_utils.py
simmetry/vectors/: core.py  pairwise.py
tests/: test_ann_optional.py  test_auto_and_index.py  test_points_sets.py  test_registry_api.py  test_strings.py  test_strings_batch.py  test_vectors.py
